Add database fix for missing total_cash_injected column

--- a/activities/investment-odyssey/class-game.html
+++ b/activities/investment-odyssey/class-game.html
@@ -14,8 +14,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     <!-- Chart.js and Chart.js Zoom plugin -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom@1.2.1/dist/chartjs-plugin-zoom.min.js"></script>
 
     <style>
         /* Sticky Next Round Button */
@@ -757,6 +757,9 @@
 
     <!-- Database Adapter -->
     <script src="js/db-adapter.js?v=1"></script>
+
+    <!-- Database Fix Script -->
+    <script src="js/db-fix-total-cash-injected.js?v=1"></script>
 
     <!-- Game Scripts -->
     <script src="js/game-core.js?v=14"></script>
