Implement completely new cash injection system with dedicated manager and SQL functions

--- a/activities/investment-odyssey/class-game.html
+++ b/activities/investment-odyssey/class-game.html
@@ -762,6 +762,7 @@
     <script src="js/db-fix-total-cash-injected.js?v=1"></script>
 
     <!-- Game Scripts -->
+    <script src="js/cash-injection.js?v=1"></script>
     <script src="js/game-core.js?v=14"></script>
     <script src="js/game-ui.js?v=13"></script>
     <script src="js/game-trading.js?v=13"></script>
