Fix class leaderboard and TA controls issues

--- a/activities/investment-odyssey/ta-controls.html
+++ b/activities/investment-odyssey/ta-controls.html
@@ -238,6 +238,7 @@
                                                 <th>Rank</th>
                                                 <th>Student</th>
                                                 <th>Total Value</th>
+                                                <th>Return</th>
                                             </tr>
                                         </thead>
                                         <tbody id="participants-body">
@@ -283,6 +284,6 @@
     <script src="js/header-auth.js?v=5"></script>
 
     <!-- TA Controls Script -->
-    <script src="js/ta-controls.js?v=3"></script>
+    <script src="js/ta-controls.js?v=4"></script>
 </body>
 </html>
