--- a/activities/investment-odyssey/ta-controls.html
+++ b/activities/investment-odyssey/ta-controls.html
@@ -145,6 +145,9 @@
                             <p class="text-muted mb-0">Teaching Assistant</p>
                         </div>
                         <div>
+                            <a href="game-history.html" class="btn btn-outline-info mr-2">
+                                <i class="fas fa-history mr-1"></i> Game History
+                            </a>
                             <button id="refresh-sections-btn" class="btn btn-outline-primary">
                                 <i class="fas fa-sync-alt mr-1"></i> Refresh Sections
                             </button>
