--- a/activities/investment-odyssey/game-history.html
+++ b/activities/investment-odyssey/game-history.html
@@ -114,13 +114,22 @@
             <!-- Games Filter -->
             <div class="filter-container mb-4">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         <div class="form-group mb-0">
                             <label for="search-filter"><i class="fas fa-search mr-1"></i> Search:</label>
-                            <input type="text" id="search-filter" class="form-control" placeholder="Search by section, date...">
+                            <input type="text" id="search-filter" class="form-control" placeholder="Search by section, location...">
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-4">
+                        <div class="form-group mb-0">
+                            <label for="date-filter"><i class="fas fa-calendar-alt mr-1"></i> Date (Pacific Time):</label>
+                            <select id="date-filter" class="form-control">
+                                <option value="all">All Dates</option>
+                                <!-- Dates will be populated dynamically -->
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
                         <div class="form-group mb-0">
                             <label for="status-filter"><i class="fas fa-filter mr-1"></i> Status:</label>
                             <select id="status-filter" class="form-control">
@@ -169,6 +178,6 @@
     <script src="js/header-auth.js?v=5"></script>
 
     <!-- Game History Script -->
-    <script src="js/game-history.js?v=1"></script>
+    <script src="js/game-history.js?v=2"></script>
 </body>
 </html>
