Make game history page more robust with better error handling

--- a/activities/investment-odyssey/ta-controls.html
+++ b/activities/investment-odyssey/ta-controls.html
@@ -145,12 +145,28 @@
                             <p class="text-muted mb-0">Teaching Assistant</p>
                         </div>
                         <div>
-                            <a href="game-history.html" class="btn btn-outline-info mr-2">
+                            <a href="game-history.html" class="btn btn-info mr-2">
                                 <i class="fas fa-history mr-1"></i> Game History
                             </a>
                             <button id="refresh-sections-btn" class="btn btn-outline-primary">
                                 <i class="fas fa-sync-alt mr-1"></i> Refresh Sections
                             </button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Game History Notice -->
+                <div class="alert alert-info mb-4">
+                    <div class="d-flex align-items-center">
+                        <div class="mr-3">
+                            <i class="fas fa-info-circle fa-2x"></i>
+                        </div>
+                        <div>
+                            <h5 class="mb-1">View Past Game Results</h5>
+                            <p class="mb-0">
+                                You can access results from all your past games in the
+                                <a href="game-history.html" class="font-weight-bold">Game History</a> page.
+                            </p>
                         </div>
                     </div>
                 </div>
