Improve leaderboard displays with return calculations and sorting

--- a/activities/investment-odyssey/leaderboard.html
+++ b/activities/investment-odyssey/leaderboard.html
@@ -68,6 +68,39 @@
             background-color: #007bff;
             color: white;
         }
+
+        /* Sortable columns */
+        .sortable {
+            cursor: pointer;
+            position: relative;
+        }
+
+        .sortable:hover {
+            background-color: rgba(0, 123, 255, 0.1);
+        }
+
+        .sortable i.fas {
+            margin-left: 5px;
+            opacity: 0.5;
+        }
+
+        .sortable.sort-asc i.fas:before {
+            content: "\f0de"; /* fa-sort-up */
+            opacity: 1;
+        }
+
+        .sortable.sort-desc i.fas:before {
+            content: "\f0dd"; /* fa-sort-down */
+            opacity: 1;
+        }
+
+        .return-positive {
+            color: #28a745;
+        }
+
+        .return-negative {
+            color: #dc3545;
+        }
     </style>
 </head>
 <body class="bg-gray-50">
@@ -257,17 +290,19 @@
                             <table class="table table-hover">
                                 <thead class="thead-light">
                                     <tr>
-                                        <th scope="col" width="10%">Rank</th>
-                                        <th scope="col" width="30%">Player</th>
-                                        <th scope="col" width="20%">Section</th>
-                                        <th scope="col" width="20%">Final Portfolio</th>
-                                        <th scope="col" width="20%">Date</th>
+                                        <th scope="col" width="5%">Rank</th>
+                                        <th scope="col" width="25%">Player</th>
+                                        <th scope="col" width="15%">Section</th>
+                                        <th scope="col" width="15%" class="sortable" data-sort="value">Final Value <i class="fas fa-sort"></i></th>
+                                        <th scope="col" width="15%" class="sortable" data-sort="return">Return <i class="fas fa-sort"></i></th>
+                                        <th scope="col" width="10%">Cash Injected</th>
+                                        <th scope="col" width="15%">Date</th>
                                     </tr>
                                 </thead>
                                 <tbody id="single-leaderboard-body">
                                     <!-- Single player leaderboard entries will be populated dynamically -->
                                     <tr>
-                                        <td colspan="5" class="text-center py-4">
+                                        <td colspan="7" class="text-center py-4">
                                             <div class="spinner-border text-primary" role="status">
                                                 <span class="sr-only">Loading...</span>
                                             </div>
@@ -336,17 +371,19 @@
                             <table class="table table-hover">
                                 <thead class="thead-light">
                                     <tr>
-                                        <th scope="col" width="10%">Rank</th>
-                                        <th scope="col" width="30%">Player</th>
-                                        <th scope="col" width="20%">Section</th>
-                                        <th scope="col" width="20%">Final Portfolio</th>
-                                        <th scope="col" width="20%">Date</th>
+                                        <th scope="col" width="5%">Rank</th>
+                                        <th scope="col" width="25%">Player</th>
+                                        <th scope="col" width="15%">Section</th>
+                                        <th scope="col" width="15%" class="sortable" data-sort="value">Final Value <i class="fas fa-sort"></i></th>
+                                        <th scope="col" width="15%" class="sortable" data-sort="return">Return <i class="fas fa-sort"></i></th>
+                                        <th scope="col" width="10%">Cash Injected</th>
+                                        <th scope="col" width="15%">Date</th>
                                     </tr>
                                 </thead>
                                 <tbody id="class-leaderboard-body">
                                     <!-- Class game leaderboard entries will be populated dynamically -->
                                     <tr>
-                                        <td colspan="5" class="text-center py-4">
+                                        <td colspan="7" class="text-center py-4">
                                             <div class="spinner-border text-primary" role="status">
                                                 <span class="sr-only">Loading...</span>
                                             </div>
@@ -378,17 +415,19 @@
                             <table class="table table-hover">
                                 <thead class="thead-light">
                                     <tr>
-                                        <th scope="col" width="10%">Rank</th>
-                                        <th scope="col" width="30%">Player</th>
-                                        <th scope="col" width="20%">Section</th>
-                                        <th scope="col" width="20%">Final Portfolio</th>
-                                        <th scope="col" width="20%">Date</th>
+                                        <th scope="col" width="5%">Rank</th>
+                                        <th scope="col" width="25%">Player</th>
+                                        <th scope="col" width="15%">Section</th>
+                                        <th scope="col" width="15%" class="sortable" data-sort="value">Final Value <i class="fas fa-sort"></i></th>
+                                        <th scope="col" width="15%" class="sortable" data-sort="return">Return <i class="fas fa-sort"></i></th>
+                                        <th scope="col" width="10%">Cash Injected</th>
+                                        <th scope="col" width="15%">Date</th>
                                     </tr>
                                 </thead>
                                 <tbody id="overall-leaderboard-body">
                                     <!-- Overall leaderboard entries will be populated dynamically -->
                                     <tr>
-                                        <td colspan="5" class="text-center py-4">
+                                        <td colspan="7" class="text-center py-4">
                                             <div class="spinner-border text-primary" role="status">
                                                 <span class="sr-only">Loading...</span>
                                             </div>
@@ -459,6 +498,6 @@
     </div>
 
     <!-- Leaderboard Script -->
-    <script src="js/leaderboard.js?v=12"></script>
+    <script src="js/leaderboard.js?v=13"></script>
 </body>
 </html>
