UI and security improvements: restrict TA login, remove display name field, update navigation, add cash injection info

--- a/activities/investment-odyssey/class-game.html
+++ b/activities/investment-odyssey/class-game.html
@@ -224,6 +224,7 @@
                         <div class="nav-links-left">
                             <a href="../../index.html" class="nav-link">Home</a>
                             <a href="../../games.html" class="nav-link">Games</a>
+                            <a href="about.html" class="nav-link">About</a>
                             <a href="index.html" class="nav-link">Play Game</a>
                             <a href="leaderboard.html" class="nav-link">Leaderboard</a>
                             <a href="ta-controls.html" class="nav-link" id="ta-controls-link" style="display: none;">TA Controls</a>
