--- a/activities/investment-odyssey/ta-controls.html
+++ b/activities/investment-odyssey/ta-controls.html
@@ -98,6 +98,7 @@
                         <div class="nav-links-left">
                             <a href="../../index.html" class="nav-link">Home</a>
                             <a href="../../games.html" class="nav-link">Games</a>
+                            <a href="about.html" class="nav-link">About</a>
                             <a href="index.html" class="nav-link">Play Game</a>
                             <a href="leaderboard.html" class="nav-link">Leaderboard</a>
                         </div>
@@ -107,7 +108,7 @@
                                 <div class="user-avatar">
                                     <i class="fas fa-user-shield"></i>
                                 </div>
-                                <span class="user-name" id="user-name-display">TA</span>
+                                <a href="leaderboard.html" class="user-name" id="user-name-display">TA</a>
                                 <button class="sign-out-btn" id="sign-out-btn">Sign Out</button>
                             </div>
                         </div>
