--- a/activities/investment-odyssey/about.html
+++ b/activities/investment-odyssey/about.html
@@ -204,7 +204,8 @@
                     <h3 class="text-xl font-semibold text-center mb-3">Start with $10,000</h3>
                     <p class="text-gray-600">
                         Begin your investment journey with $10,000 in virtual cash. Each game consists of 20 rounds,
-                        with each round representing a market cycle.
+                        with each round representing a market cycle. You'll receive a random cash injection every round
+                        that mimics annual savings contributions to your portfolio.
                     </p>
                 </div>
             </div>
