--- a/games.html
+++ b/games.html
@@ -119,7 +119,7 @@
                     <a href="index.html">Home</a>
                     <a href="games.html" class="active">Games</a>
                     <a href="activities/index.html">Activities</a>
-                    <a href="materials.html">Materials</a>0
+                    <a href="materials.html">Materials</a>
                 </div>
                 <h1 class="banner-title">Economics Games</h1>
                 <p class="banner-subtitle">Interactive learning experiences for economics students</p>
@@ -199,11 +199,7 @@
                                             </div>
                                         </div>
 
-                                        <div class="form-group">
-                                            <label for="display-name">Display Name (for Leaderboard)</label>
-                                            <input type="text" id="display-name" class="form-control" placeholder="Enter your display name">
-                                            <small class="form-text text-muted">This name will be shown on the leaderboard. Only your highest score will be displayed.</small>
-                                        </div>
+
 
                                         <div class="d-flex justify-content-between mt-4">
                                             <button id="login-btn" class="btn btn-primary">Sign In</button>
@@ -263,9 +259,6 @@
                             <p class="card-text">Navigate financial markets and build your investment portfolio in this interactive simulation game. Learn about different asset classes, risk management, and investment strategies.</p>
                             <div class="mt-3">
                                 <a href="activities/investment-odyssey/about.html" class="btn btn-primary btn-lg">Play Investment Odyssey</a>
-                            </div>
-                            <div class="mt-2">
-                                <a href="activities/investment-odyssey/class-game.html" class="btn btn-outline-success">Join Class Game</a>
                             </div>
                         </div>
                     </div>
