Update TA controls: link TA name to game history and remove redundant TA controls container

--- a/activities/investment-odyssey/ta-controls.html
+++ b/activities/investment-odyssey/ta-controls.html
@@ -108,7 +108,7 @@
                                 <div class="user-avatar">
                                     <i class="fas fa-user-shield"></i>
                                 </div>
-                                <a href="leaderboard.html" class="user-name" id="user-name-display">TA</a>
+                                <a href="game-history.html" class="user-name" id="user-name-display">TA</a>
                                 <button class="sign-out-btn" id="sign-out-btn">Sign Out</button>
                             </div>
                         </div>
