Improve TA interface: remove Game History Notice and add Games Home link

--- a/activities/investment-odyssey/game-history.html
+++ b/activities/investment-odyssey/game-history.html
@@ -98,7 +98,7 @@
                     <div class="d-flex justify-content-between align-items-center">
                         <div>
                             <h4 class="mb-0">Welcome, <span id="ta-name-display">TA</span></h4>
-                            <p class="text-muted mb-0">Teaching Assistant</p>
+                            <p class="text-muted mb-0">Teaching Assistant | <a href="../../games.html" class="text-primary">Games Home</a></p>
                         </div>
                         <div>
                             <a href="ta-controls.html" class="btn btn-outline-primary mr-2">
