--- a/activities/investment-odyssey/ta-controls.html
+++ b/activities/investment-odyssey/ta-controls.html
@@ -143,7 +143,7 @@
                     <div class="d-flex justify-content-between align-items-center">
                         <div>
                             <h4 class="mb-0">Welcome, <span id="ta-name-display">TA</span></h4>
-                            <p class="text-muted mb-0">Teaching Assistant</p>
+                            <p class="text-muted mb-0">Teaching Assistant | <a href="../../games.html" class="text-primary">Games Home</a></p>
                         </div>
                         <div>
                             <a href="game-history.html" class="btn btn-info mr-2">
@@ -156,21 +156,7 @@
                     </div>
                 </div>
 
-                <!-- Game History Notice -->
-                <div class="alert alert-info mb-4">
-                    <div class="d-flex align-items-center">
-                        <div class="mr-3">
-                            <i class="fas fa-info-circle fa-2x"></i>
-                        </div>
-                        <div>
-                            <h5 class="mb-1">View Past Game Results</h5>
-                            <p class="mb-0">
-                                You can access results from all your past games in the
-                                <a href="game-history.html" class="font-weight-bold">Game History</a> page.
-                            </p>
-                        </div>
-                    </div>
-                </div>
+
             </div>
 
             <!-- Sections Filter -->
