Fix Portfolio Performance Graph in class-game.html to fit container properly

--- a/activities/investment-odyssey/class-game.html
+++ b/activities/investment-odyssey/class-game.html
@@ -381,16 +381,16 @@
                             </div>
                             <div class="card-body">
                                 <div class="row">
-                                    <div class="col-md-8" style="height: 400px; position: relative;">
+                                    <div class="col-md-8" style="height: 350px; position: relative;">
                                         <div class="d-flex justify-content-end mb-2">
                                             <button id="reset-portfolio-zoom" class="btn btn-sm btn-secondary">Reset Zoom</button>
                                         </div>
-                                        <canvas id="portfolio-chart" width="400" height="200"></canvas>
+                                        <canvas id="portfolio-chart"></canvas>
                                     </div>
-                                    <div class="col-md-4" style="height: 400px;">
+                                    <div class="col-md-4" style="height: 350px;">
                                         <h5 class="text-center mb-3">Portfolio Allocation</h5>
-                                        <div style="height: 300px; width: 100%; display: flex; justify-content: center; align-items: center;">
-                                            <canvas id="portfolio-allocation-chart" width="300" height="300"></canvas>
+                                        <div style="height: 250px; width: 100%; display: flex; justify-content: center; align-items: center;">
+                                            <canvas id="portfolio-allocation-chart"></canvas>
                                         </div>
                                     </div>
                                 </div>
